--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-kakao-maps-sdk": "^1.1.26",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
